--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,20 @@
 <head>
   <meta charset="utf-8">
   <title>PhoneBookTcsSep2020</title>
+  <!-- will explain during build -->
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+  <!-- todo: learn about integrating bootstrap in angular app-->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" 
+  integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" 
+  crossorigin="anonymous">
+
+
 </head>
 <body>
+  <!-- step 1: What's this? -->
   <app-root></app-root>
 </body>
 </html>
